--- a/setup.cfg
+++ b/setup.cfg
@@ -3,4 +3,4 @@ optimize = 1
 
 [bdist_rpm]
 requires = python-logga = 0.0.0
-build-requires = rpm-build >= 4.8.0,
+build-requires = rpm-build >= 4.8.0
